--- a/changes.Rmd
+++ b/changes.Rmd
@@ -61,7 +61,7 @@ test_output <- function(old_func, new_func) {
 
 Changes here include:
 
-  + Don't need to pass in the whole vector of `registry_years` which aren't used, instead just pass in the ones of interest to this function, thereby removing the need to pass in starting / finishing indices
+  + Don't need to pass in the whole vector of `registry_years` which aren't used, instead just pass in the the starting registry date to use and the number of years of registry to use
   + Likewise can then calculate the required number of years to be investigated as the length of the passed in vector
   + Don't need to pass in the whole data frame, only the dates of diagnosis are required to calculate incidence, therefore the `load_data` function isn't needed here either
   + Changed the calculation for number of incident events from determining the subset of events in the desired time frame, subsetting the vector with these indices, and then calculating its length, to just calculating the sum of subset of events as it's quicker
@@ -96,7 +96,7 @@ As can be seen, the same values for incidence rates are calculated.
 
 Changes:
   
-  + As with `incidence`, removed `registry_year` indices by instead requiring user pass in years of interest in `registry_year` vector. 
+  + As with `incidence`, removed `registry_year` indices by instead requiring user pass in the starting date and the number of years to use
   + As with `incidence`, the whole registry data frame isn't required to calculate this output, only the entry dates are so the first argument has been changed to a vector
   + A keyword argument has been added to allow the user to select the level of confidence intervals, rather than being hardcoded at 95%
   + Changed the output from a dataframe to a list, since each of the 4 values are not observations of the same variables and are completely independent, therefore a list is a more appropriate data structure. Lists index names are more useful than row names of a data frame too, as the later are generally ignored, while the former lets you index with the familiar *$* syntax.
@@ -269,7 +269,7 @@ Changes:
   + Have made the function return an S3 object of class *prevalence*. NB: This is just a glorified list essentially, but is more in the style of idiomatic R and allows for simpler indexing.
   + Have made the population daily survival rates be calculated from within `prevalence` itself, making it more user friendly. The user can specify which population registry to use. The `prevalence` object returns the daily survival rates as item `popsurv`
   + Have changed the dimensions of the posterior age distribution output from `nyears x nbootstraps x maxyearlyinc` to `nbootstraps x maxyearlyinc x nyears`, primarily because I can't seem to get the list to collapse as desired. If this breaks compatibility with other functions then I should be able to hack a fix, although for the use in histograms etc... it doesn't make a difference
-  + As with the `incidence` function, the entire set of registry years do not need to be supplied, only those which are actually used. This removes the `registry_start_year` and `registry_end_year` parameters
+  + As with the `incidence` function, the entire set of registry years do not need to be supplied, instead the user just enters the registry date of interest and the number of years to use
   + Should the calculation of `wb` using `survreg` use the full dataset, or just that subset by entering the registry in the years of interest (`data_r`)?
   + Have renamed `fix_rate` to `known_inc_rate` for clarity (on the output at least)
   + Changed the calculation of average `by_year_cases` from an `apply(foo, 1, mean)` call to `rowMeans` as it's quicker and more readable
@@ -308,11 +308,10 @@ prev_current_output <- function() {
 prev_dev <- function() {
   set.seed(17)
   N_years = 10
-  registry_years = sapply(5:13, function(x) sprintf("20%02d-09-01", x))
   names = list(age='age', sex='sex', entry_date='DateOfDiag', status='status', time='stime') 
   
-  prevalence_total <- prevalence(registry_data, registry_years, 
-                                 N_years = N_years, colnames=names,
+  prevalence_total <- prevalence(registry_data, N_years = N_years, colnames=names,
+                                 start='2005-09-01', num_years=8,
                                  cure_time = cure*365)
 }
 ```
@@ -389,11 +388,11 @@ Changes:
   + The code to calculate `per_year` is identical to that in `incidence`, and so this line has been replaced by a function call
   + Have changed the code to calculate the per_year censoring into an sapply to provide encapsulation and better readability
   + No need to subset `registry_years` to those years of interest now that only those years of interest are passed into the function
+  + The user just needs to pass in two columns, the status_at_index and the entry_date column rather than the full data frame
   
   
 ```{r}
 countprev_current_output <- function() {
-  set.seed(17)
   registry_years <- c("2004-09-01", "2005-09-01", "2006-09-01", "2007-09-01", "2008-09-01",
                       "2009-09-01", "2010-09-01", "2011-09-01", "2012-09-01", "2013-09-01")
   registry_start_year <- 2
@@ -406,10 +405,7 @@ countprev_current_output <- function() {
 
 ```{r}
 countprev_dev <- function() {
-  set.seed(17)
-  registry_years = sapply(5:13, function(x) sprintf("20%02d-09-01", x))
-  colnames = list(entry_date='DateOfDiag', event_date='EventDate', status_at_index='status2')
-  counted_prevalence(registry_data, registry_years, colnames=colnames)
+  counted_prevalence(registry_data$DateOfDiag, registry_data$status2, start='2005-09-01', num_years=8)
 }
 ```
 
