--- a/changes.Rmd
+++ b/changes.Rmd
@@ -147,16 +147,16 @@ Changes:
   
 ```{r}
 current_survival_rates <- function(x) {
-  pop_data_mx <- readRDS('data/population_data_mx.rds')
-  daily_survival_rate_males <- daily_survival_rate_current(pop_data_mx, sex = "Males")
+  data(population_data_mx_mat)
+  daily_survival_rate_males <- daily_survival_rate_current(population_data_mx_mat, sex = "Males")
   daily_survival_males <- cumprod(1 - daily_survival_rate_males)
 }
 ```
 
 ```{r}
 new_survival_rates <- function(x) {
-  pop_data_mx <- readRDS('data/population_data_mx_df.rds')
-  daily_survival_males <- population_survival_rate(rate ~ age, subset(pop_data_mx, sex==0))
+  data(population_data_mx)
+  daily_survival_males <- population_survival_rate(rate ~ age, subset(population_data_mx, sex==0))
 }
 ```
 
@@ -265,6 +265,7 @@ Changes:
 
   + The main change is that this large function has been refactored into several smaller functions, allowing for improved readability and maintainability
   + Have refactored all the code which calculates the `post_age_dist` and `by_year` estimates for males and females into a single function and just call it with the relevant parameters for each sex as required
+  + Rather than requiring a data frame with the correctly specified column names, the function now accepts a formula
   + The code previously didn't correctly work when datasets with a single sex were passed in. This has been fixed.
   + Have made the function return an S3 object of class *prevalence*. NB: This is just a glorified list essentially, but is more in the style of idiomatic R and allows for simpler indexing.
   + Have made the population daily survival rates be calculated from within `prevalence` itself, making it more user friendly. The user can specify which population registry to use. The `prevalence` object returns the daily survival rates as item `popsurv`
@@ -281,12 +282,12 @@ Since the order in which the RNG is called has been changed, the results from th
 
 ```{r}
 prev_current_output <- function() {
-  pop_data_mx <- readRDS('data/population_data_mx.rds')
+  data(population_data_mx_mat)
   set.seed(17)
-  daily_survival_rate_males <- daily_survival_rate_current(pop_data_mx, sex = "Males")
+  daily_survival_rate_males <- daily_survival_rate_current(population_data_mx_mat, sex = "Males")
   daily_survival_males <- cumprod(1 - daily_survival_rate_males)
   
-  daily_survival_rate_females <- daily_survival_rate_current(pop_data_mx, sex = "Females")
+  daily_survival_rate_females <- daily_survival_rate_current(population_data_mx_mat, sex = "Females")
   daily_survival_females <- cumprod(1 - daily_survival_rate_females)
   
   registry_years <- c("2004-09-01", "2005-09-01", "2006-09-01", "2007-09-01", "2008-09-01",
@@ -295,12 +296,11 @@ prev_current_output <- function() {
   registry_end_year <- 9
   N_years = 10
   
-  prevalence_total <- prevalence_current(load_data(registry_data), registry_years, registry_start_year, 
-                                         registry_end_year, N_years = N_years, 
-                                         daily_survival_males = daily_survival_males, 
-                                         daily_survival_females = daily_survival_females, 
-                                         cure_time = cure*365)
-  
+  prevalence_current(load_data(registry_data), registry_years, registry_start_year, 
+                     registry_end_year, N_years = N_years, 
+                     daily_survival_males = daily_survival_males, 
+                     daily_survival_females = daily_survival_females, 
+                     cure_time = cure*365)
 }
 ```
 
@@ -308,11 +308,21 @@ prev_current_output <- function() {
 prev_dev <- function() {
   set.seed(17)
   N_years = 10
-  names = list(age='age', sex='sex', entry_date='DateOfDiag', status='status', time='stime') 
-  
-  prevalence_total <- prevalence(registry_data, N_years = N_years, colnames=names,
-                                 start='2005-09-01', num_years=8,
-                                 cure_time = cure*365)
+  prevalence(Surv(stime, status) ~ sex(sex) + age(age) + entry(DateOfDiag),
+             registry_data, N_years = N_year,
+             start='2005-09-01', num_years=8,
+             cure_time = cure*365)
+}
+```
+
+```{r}
+prev_male <- function() {
+  set.seed(17)
+  N_years = 10
+  prevalence(Surv(stime, status) ~ sex(sex) + age(age) + entry(DateOfDiag),
+             subset(registry_data, sex==0), N_years = N_year,
+             start='2005-09-01', num_years=8,
+             cure_time = cure*365)
 }
 ```
 
@@ -493,7 +503,7 @@ Note the new behaviour of the function, the user can specify the age bins with t
 
 ```{r}
 prev_obj <- prev_dev()
-prevalence_by_age(dist = prev_obj$post, registry_end_year=9, N_years=10, age_intervals=c(18, 50, 80))
+prevalence_by_age(prev_obj, age_intervals=c(18, 50, 80))
 ```
 
 # Utility Functions
@@ -521,15 +531,15 @@ test_nlphl <- function() {
     prelim <- prelim[!is.na(prelim$sex), ]
     prelim_r <- prelim[prelim$DateOfDiag >= "2006-09-01", ]
     
-    registry_years = sapply(7:15, function(x) sprintf("20%02d-09-01", x))
     N_years <- 10
     names <- list(age='age', status='status', entry_date='DateOfDiag', sex='sex', time='stime')
     cure <- 3
     
     set.seed(17)
     
-    prevalence(prelim_r, registry_years, 
-               N_years = N_years, colnames=names,
+    prevalence(Surv(stime, status) ~ sex(sex) + age(age) + entry(DateOfDiag),
+               prelim_r, start='2007-09-01', num_years=8,
+               N_years = N_years,
                cure_time = cure*365)
 }
 ```
@@ -560,7 +570,7 @@ bar
 
 There are still several areas that can be improved:
 
-  + Have the population data loaded into the namespace with the `data()` function so it can be accessed by `prevalence()` rather than having to explicitly load it (and encounter path difficulties). Just like when packages come with datasets they can be loaded with `data(<name>)`
+  + Are there any actual differences between population_data and population_data_mx?
   + It could be worth further optimising the bootstrapping function, although this would be challenging as it would require the pre-processing currently done in `survreg.fit` to be implemented in C++. Maybe just parallelise it instead?
   + The package doesn't load dependent libraries (such as survival, dplyr etc...), despite being listed in the DESCRIPTION file. Is there another file where libraries to be loaded should be specified?
   + Improve the `print` and `summary` methods of `prevalence` after receiving feedback
