--- a/changes.Rmd
+++ b/changes.Rmd
@@ -309,7 +309,7 @@ prev_dev <- function() {
   set.seed(17)
   N_years = 10
   prevalence(Surv(stime, status) ~ sex(sex) + age(age) + entry(DateOfDiag),
-             registry_data, N_years = N_year,
+             registry_data, N_years = N_years,
              start='2005-09-01', num_years=8,
              cure_time = cure*365)
 }
@@ -320,7 +320,7 @@ prev_male <- function() {
   set.seed(17)
   N_years = 10
   prevalence(Surv(stime, status) ~ sex(sex) + age(age) + entry(DateOfDiag),
-             subset(registry_data, sex==0), N_years = N_year,
+             subset(registry_data, sex==0), N_years = 10,
              start='2005-09-01', num_years=8,
              cure_time = cure*365)
 }
