--- a/vignettes/prevR-vignette-short.Rmd
+++ b/vignettes/prevR-vignette-short.Rmd
@@ -48,7 +48,7 @@ There is a discrepency between the last recorded incident case and the last date
 The following code calculates absolute incidence of disease for each selected year of the registry:
 
 ```{r totalincidence, error = TRUE}
-raw_incidence <- incidence(registry_data$entrydate, start="2004-01-30", 8)
+raw_incidence <- incidence(registry_data$entrydate, start="2004-01-30", 9)
 raw_incidence
 ```
 
@@ -60,7 +60,7 @@ sim_check(raw_incidence)
 
 ```{r, fig.width = 7, fig.height = 7, include = TRUE, results="hide"}
 par(mfrow=c(2,2))
-smoothed_incidence(registry_data$entrydate, start_date="2004-01-30", num_years=8)
+smoothed_incidence(registry_data$entrydate, start_date="2004-01-30", num_years=9)
 ```
 
 The age distribution of incident cases can also be inspected:
@@ -74,17 +74,18 @@ The age distribution of incident cases can also be inspected:
 To calculate the mean incidence rate per 100,000 within the study population `meanIR` is used, which requires an estimate of the size of the population at risk:
   
 ```{r incidencerate, error = TRUE}
-incidence_rates <- meanIR(registry_data$entrydate, population_size = 3500000,
-                          start = "2004-01-30", num_years = 8)
-incidence_rates
+meanIR(registry_data$entrydate, population_size = 3500000,
+                          start = "2004-01-30", num_years = 9)
 ```
 
 An estimate of prevalence can be counted from the data:
 
 ```{r survival, error = TRUE}
-raw_prevalence <- counted_prevalence(registry_data$entrydate, status_at_index = status2,
-                          start = "2004-01-30", num_years = 8)
-raw_prevalence
+counted_prevalence(registry_data$entrydate, 
+                     registry_data$eventdate, 
+                     registry_data$status, 
+                     indexdate = "2013-01-30", 
+                     start="2004-01-30", 9)
 ```
 
 ## Survival Modelling
@@ -141,7 +142,7 @@ Prevalence can now be calculated:
 ```{r prevalencetotal, error = TRUE}
 prevalence_total <- prevalence(Surv(time, status) ~ sex(sex) + age(age) + entry(entrydate),
                                registry_data, N_years = N_years, cure_time = cure*365, 
-                               start='2005-01-30', num_years=8)
+                               start='2004-01-30', num_years=9)
 
 by_year_total <- prevalence_total[[1]]
 by_year_total
@@ -150,7 +151,12 @@ by_year_total
 `by_year_total` is a vector of raw prevalence per year of the registry. Whether the model is predicting good numbers for the recent years for which we have actual prevalence can be assessed using a chi squared test:
 
 ```{r test, error = TRUE}
-prev_chisq(registry_data$DateOfDiag, registry_data$status2, start="2005-09-01", 8, by_year = by_year_total)
+#prev_chisq(registry_data$entrydate, 
+#           registry_data$eventdate, 
+#           registry_data$status, 
+#           indexdate = "2013-01-30", 
+#           start="2004-01-30", 9,
+#           by_year = by_year_total)
 ```
 
 The age distribution of prevalent cases can be viewed as a histogram:
@@ -163,38 +169,34 @@ hist(post_age_dist_total, prob = TRUE)
 Up until now, the simulated values of prevalent cases for the first years before the index date have been used. Here we replace these with the actual observed values:
 
 ```{r hist1, fig.width = 6, fig.height = 4, error = TRUE}
-observed <- counted_prevalence(load_data(registry_data), registry_years, registry_start_year, 
+#observed <- counted_prevalence(load_data(registry_data), registry_years, registry_start_year, 
                                registry_end_year)
-by_year_total[1:(registry_end_year - registry_start_year + 1)] <- rev(observed)
-observed_post_age_dist_total <- 
-  registry_data_r$age_initial[registry_data_r$indicator_censored_at_index == 0]
-hist(observed_post_age_dist_total, prob = TRUE)
+#by_year_total[1:(registry_end_year - registry_start_year + 1)] <- rev(observed)
+#observed_post_age_dist_total <- 
+#  registry_data_r$age_initial[registry_data_r$indicator_censored_at_index == 0]
+#hist(observed_post_age_dist_total, prob = TRUE)
 ```
 
 The age distribution of prevalent cases in the predicted years only can also be retrieved using `ageoutput`:
 
 ```{r output2, error = TRUE}
-age_props <- prevalence_by_age(dist = post_age_dist_total, registry_end_year, N_years)
-age_props
+#age_props <- prevalence_by_age(dist = post_age_dist_total, registry_end_year, N_years)
+#age_props
 ```
 
 As a way to estimate uncertainty of our survival model, i.e. sampling variation, the prevalence function calculates bootstrapped survival coefficients. `by_year_samples_total` contains the raw prevalence data for each bootstrapped sample:
 
 ```{r bysample, error = TRUE}
-by_year_samples_total <- prevalence_total[[3]]
-by_sample_total <- apply(by_year_samples_total, 2, sum)
+#by_year_samples_total <- prevalence_total[[3]]
+#by_sample_total <- apply(by_year_samples_total, 2, sum)
 ```
 
 `n_year_estimates` is a function to calculate the estimated number of *n-year* prevalent cases for any *n*. It returns the absolute numerical estimate as well as an estimate of the prevalence proportion and 95% confidence intervals for the prevalence proportion. 
 
 ```{r nyrest3, error = TRUE} 
-total3yr <- n_year_estimates(N_years = 3, registry_start_year = registry_start_year, 
-                             registry_end_year = registry_end_year, 
-                             the_samples = by_year_samples_total, by_year = by_year_total,
-                             population_size = 3500000)
-total3yr
-```
-
-```{r generatehtml, eval = FALSE, echo = FALSE, message = FALSE} 
-rmarkdown::render('rprev-vignette-short.Rmd')
+#total3yr <- n_year_estimates(N_years = 3, registry_start_year = registry_start_year, 
+#                             registry_end_year = registry_end_year, 
+#                             the_samples = by_year_samples_total, by_year = by_year_total,
+#                             population_size = 3500000)
+#total3yr
 ```
